# pgagi-assessment

./: .gitignore  LICENSE  thoughts.txt
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  health.py  interview.py  resume.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  rate_limit.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: README
backend/app/models/: __init__.py  answer.py  question.py  resume.py  session.py
backend/app/rag/: service.py
backend/app/rag/scripts/: ingest.py
backend/app/rag/src/: chunker.py  loader.py  retriever.py  vectorstore.py
backend/app/rag/tests/: __init__.py  test_retrieval.py
backend/app/repositories/: answer_repo.py  base.py  question_repo.py  resume_repo.py  session_repo.py
backend/app/schemas/: base.py  health.py  interview.py  resume.py
backend/app/services/: __init__.py  follow_up_service.py  gemini_extractor.py  gemini_service.py  interview_planner.py  interview_service.py  question_service.py  resume_service.py  session_cache.py  storage_service.py  summary_service.py
backend/app/tests/: conftest.py  test_health.py  test_interview.py  test_resume.py
rag/scripts/: ingest.py
rag/src/: embedder.py  retriever.py
