[tool.poetry]
name = "pgagi-backend"
version = "0.1.0"
description = "FastAPI backend for pgagi"
authors = ["Arth Arvind <artharvind18@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
asgi-correlation-id = "^4.3.1"
slowapi = "^0.1.9"
redis = "^5.0.4"
pinecone-client = "^4.1.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
aioboto3 = "^13.0.1"
pymupdf = "^1.24.2"
google-generativeai = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
